--- a/manual.html
+++ b/manual.html
@@ -5,12 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manual - Biblioteca de Jogos PS2</title>
     <link rel="stylesheet" href="configgeral.css">   
-
-
 </head>
 <body>
     <div class="container manual-container">
-        <a href="inicial.html" class="back-btn">Voltar para a Página Inicial</a>
+        <a href="index.php" class="back-btn">Voltar para a Página Inicial</a>
         
         <header>
             <h1>Manual do Usuário</h1>
@@ -19,7 +17,7 @@
 
         <section>
             <h2>O que é a PS2 blibioteca</h2>
-            <p>Utilize nossa biblioteca para achar jogos por suas informações facilitando a filtragem dos jogos disponiveis na sua biblioteca pessoal, facilitando a catalogazão e procura de titulos classicos</p>
+            <p>Utilize nossa biblioteca para achar jogos por suas informações facilitando a filtragem dos jogos disponiveis na sua biblioteca pessoal, facilitando a catalogação e procura de títulos clássicos</p>
         </section>
 
         <section>
@@ -31,6 +29,7 @@
             <ul>
                 <li>Digitar o nome de um jogo na barra de pesquisa</li>
                 <li>Filtrar por gênero (Ação, Aventura, RPG, etc.)</li>
+                <li>Filtrar por desenvolvedora</li>
                 <li>Filtrar por ano de lançamento</li>
             </ul>
 
